--- a/configs/config_v0.1.yaml
+++ b/configs/config_v0.1.yaml
@@ -1,7 +1,12 @@
-# supplies "arguments" for a certain dataset pipeline run, overriding default values provided by DEFAULT_CONFIG in configs.py
+# Main yaml file for pipeline configs. 
+#
+# Supplies "arguments" for a certain dataset pipeline run, overriding default values provided by DEFAULT_CONFIG in configs.py. 
+#   - Affects how the run is executed (usually tweaking this .yaml -> new dataset version.)
+#   - Important: NOT where schema.yaml belongs (although configs can reference it.)
 
-
-schema_version: "0.1"
+# pointer to schema yaml 
+schema:
+  context: "storm250_context_v1.0.0"
 
 # EBS mount mirror root (replaces /content/drive/MyDrive/... on Colab)
 root_dir: "/data/Storm250"
