refactored save_df_for_training to read schema from .yaml files

--- a/configs/config_v0.1.yaml
+++ b/configs/config_v0.1.yaml
@@ -8,6 +8,11 @@
 schema:
   context: "storm250_context_v1.0.0"
 
+# self describing metadata about the specific dataset run (change as we tweak params)
+dataset:
+  name: storm250_level2
+  version: "1.0.0"
+
 # EBS mount mirror root (replaces /content/drive/MyDrive/... on Colab)
 root_dir: "/data/Storm250"
 
